# cena-demo

./: LICENSE.md  README.md  README_OSS.md
cena_demo_code_linux/include/computedvalue/: AbstractMovingWindow.hpp  FloatPid.hpp  MajorityVote.hpp  MovingWindowAverage.hpp  PidControl.hpp
cena_demo_code_linux/include/controlengine/: MtpControlEngine.hpp
cena_demo_code_linux/include/locking/: ILockable.hpp  Lock.hpp  LockedObject.hpp
cena_demo_code_linux/include/logging/: AbstractFilteringMessageLogger.hpp  AbstractLoggingSink.hpp  FilteringMessageLogger.hpp  ILogger.hpp  ILoggingSink.hpp  ILoggingSinkManager.hpp  LogLevels.hpp  LogMessage.hpp  LogMessageFormatter.hpp  OptionalLoggingDecorator.hpp  RotatingFileSink.hpp  SinkedLogger.hpp  TerminalOutputSink.hpp
cena_demo_code_linux/include/modelsemantics/: AddressSpace.hpp  GlobalSemanticIdentifierFactory.hpp  IModel.hpp  ISemanticIdentifier.hpp  ISemanticIdentifierFactory.hpp  (+4 more)
cena_demo_code_linux/src/example_usage/: CMakeLists.txt  examplePEA.uap  example_mtp_controlengine.cpp
doc/: genindex.html  objects.inv  searchindex.js
doc/00_general/: about_noa.html  feature_list.html  frequent_questions.html
doc/10_getting_started/: architecture_overview.html
doc/20_tutorials/: example_util_computedValues.html
doc/_static/: custom.css  documentation_options.js
doc/doc.generated/: CHANGELOG.html
docs/: .buildinfo  index.html  search.html
docs/00_general/: about_mtp.html  before_you_start.html  glossary.html  index.html
docs/10_getting_started/: index.html
docs/20_tutorials/: example_tasks.html  index.html
(+291 files in other folders)
